# risklens-ai

./: .env.example  .gitignore  README.md
.github/workflows/: ci.yml
client/: index.html  package-lock.json  package.json
client/src/: App.tsx  index.css
client/src/features/dashboard/: DashboardPage.tsx
client/src/features/dashboard/components/: EvaluationTable.tsx  MetricCard.tsx  ModelComparison.tsx  TaskChart.tsx  TaskTable.tsx
client/src/features/playground/: PlaygroundPage.tsx
client/src/features/upload/: UploadPage.tsx
client/src/services/: api.ts  hooks.ts  mock-data.ts
client/src/shared/components/: Badge.tsx  Button.tsx  Card.tsx  EmptyState.tsx  StatusBadge.tsx
client/src/shared/layouts/: AppLayout.tsx  Sidebar.tsx
client/src/shared/lib/: utils.ts
client/src/types/: api.ts
docs/: architecture.md  security.md
docs/adrs/: 001-model-agnostic-gateway.md  002-async-task-pipeline.md  003-evaluation-framework.md  004-s3-task-store.md
infra/: cloudwatch.tf  iam.tf  main.tf  outputs.tf  s3.tf  sqs.tf  terraform.tfvars.example  variables.tf
server/: config.py  main.py  pyproject.toml  worker.py
server/features/extraction/: models.py  prompts.py  router.py  schemas.py  service.py  store.py
server/features/gateway/: protocol.py  service.py  types.py
server/infrastructure/llm/: anthropic_adapter.py  base_adapter.py  openai_adapter.py
server/infrastructure/queue/: sqs_client.py
server/infrastructure/storage/: s3_client.py
server/tests/: conftest.py  test_api.py  test_gateway_service.py  test_types.py
