[project]
name = "risklens-ai-server"
version = "0.1.0"
description = "LLM-powered document processing for commercial insurance"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.9.0",
    "langchain-core>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.3.0",
    "httpx>=0.28.0",
    "pdfplumber>=0.11.0",
    "python-multipart>=0.0.18",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.26.0",
    "ruff>=0.11.0",
]

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["pdfplumber", "pdfplumber.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100
